--- a/materials.html
+++ b/materials.html
@@ -6,347 +6,7 @@
 <title>MediaFire Auto Download</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-<style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family:Inter,system-ui,sans-serif;
-}
-
-body{
-    min-height:100vh;
-    color:#eaeaea;
-    background:
-        radial-gradient(circle at 1px 1px, #222 1px, transparent 0),
-        #0b0b0b;
-    background-size:22px 22px;
-}
-
-.wrapper{
-    max-width:1200px;
-    margin:auto;
-    padding:40px 20px;
-}
-
-header{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    margin-bottom:40px;
-}
-
-.logo{
-    display:flex;
-    align-items:center;
-    gap:10px;
-    font-weight:600;
-    font-size:1.2rem;
-}
-
-nav a.nav-btn{
-    display:flex;
-    align-items:center;
-    gap:8px;
-
-    padding:8px 14px;
-    border:1px solid rgba(255,255,255,.25);
-    border-radius:10px;
-
-    color:#aaa;
-    text-decoration:none;
-    font-size:.9rem;
-    font-weight:500;
-
-    background:transparent;
-    transition:
-        color .2s ease,
-        border-color .2s ease,
-        box-shadow .2s ease;
-}
-
-nav a.nav-btn:hover{
-    color:#fff;
-    border-color:#fff;
-    box-shadow:0 0 8px rgba(255,255,255,.25);
-}
-
-.section{
-    background:rgba(255,255,255,.03);
-    border-radius:20px;
-    padding:35px;
-    box-shadow:0 0 0 1px rgba(255,255,255,.05);
-}
-
-.section h1{
-    font-size:2rem;
-    margin-bottom:10px;
-}
-
-.section p{
-    color:#aaa;
-    margin-bottom:30px;
-}
-
-#cardsContainer{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
-    gap:20px;
-}
-
-.card{
-    background:rgba(255,255,255,.04);
-    border-radius:16px;
-    padding:20px;
-    display:flex;
-    gap:20px;
-    align-items:center;
-    box-shadow:inset 0 0 0 1px rgba(255,255,255,.06);
-    transition:.25s;
-}
-
-.card:hover{
-    background:rgba(255,255,255,.07);
-    transform:translateY(-3px);
-}
-
-.logo-img{
-    width:64px;
-    height:64px;
-    padding:10px;
-    border-radius:14px;
-    background:rgba(255,255,255,.08);
-    object-fit:contain;
-    flex-shrink:0;
-}
-
-.content{
-    flex:1;
-}
-
-.filename{
-    font-size:1rem;
-    font-weight:500;
-    margin-bottom:12px;
-    word-break:break-word;
-}
-
-button{
-    background:#ffffff;
-    border:none;
-    color:#000000;
-    padding:9px 18px;
-    border-radius:999px;
-    font-size:.9rem;
-    font-weight:500;
-    cursor:pointer;
-    transition:.2s;
-    box-shadow:0 4px 14px rgba(0,0,0,.25);
-}
-
-button:hover:not(:disabled){
-    background:#dedede;
-    transform:translateY(-1px);
-}
-
-button:disabled{
-    opacity:.45;
-    cursor:not-allowed;
-    box-shadow:none;
-}
-
-button.loading{
-    position: relative;
-    pointer-events: none;
-    color: transparent;
-}
-
-button.loading::after{
-    content:"";
-    width:16px;
-    height:16px;
-    border:2px solid #000;
-    border-top-color: transparent;
-    border-radius:50%;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    animation: spin .8s linear infinite;
-}
-
-@keyframes spin{
-    to{ transform:translate(-50%,-50%) rotate(360deg); }
-}
-
-.status{
-    margin-top:8px;
-    font-size:.85rem;
-    color:#9aa0a6;
-}
-
-@media(max-width:600px){
-    .card{
-        flex-direction:column;
-        text-align:center;
-    }
-}
-    
-.refresh-btn{
-    width:32px;
-    height:32px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-
-    background:#000 !important;
-    color:#fff !important;
-
-    border:1px solid transparent;
-    border-radius:50%;
-
-    font-size:0.95rem;
-    cursor:pointer;
-
-    transition:
-        border-color .25s ease,
-        box-shadow .25s ease;
-
-    -webkit-tap-highlight-color: transparent;
-    -webkit-appearance: none;
-    appearance: none;
-    outline:none;
-}
-
-.refresh-btn:hover,
-.refresh-btn:hover:not(:disabled){
-    background:#000 !important;
-    border-color:#fff;
-    box-shadow:0 0 6px rgba(255,255,255,.35);
-}
-
-.refresh-btn:active{
-    background:#000 !important;
-    border-color:#fff;
-    box-shadow:0 0 6px rgba(255,255,255,.35);
-}
-
-.refresh-btn:focus,
-.refresh-btn:focus-visible{
-    background:#000 !important;
-    border-color:#fff;
-    outline:none;
-}
-
-.refresh-btn.spin i{
-    animation: refresh-spin .8s linear infinite;
-}
-
-@keyframes refresh-spin{
-    to{ transform:rotate(360deg); }
-}
-
-.section-header{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    margin-bottom:6px;
-}
-
-.section-header-left{
-    display:flex;
-    align-items:center;
-    gap:12px;
-}
-
-.search-box{
-    display:flex;
-    align-items:center;
-    gap:10px;
-
-    width:260px;
-    padding:8px 14px;
-
-    border-radius:12px;
-    background:rgba(255,255,255,.05);
-    box-shadow:inset 0 0 0 1px rgba(255,255,255,.08);
-}
-
-.search-box i{
-    color:#aaa;
-    font-size:.9rem;
-}
-
-.search-box input{
-    flex:1;
-    background:transparent;
-    border:none;
-    outline:none;
-
-    color:#fff;
-    font-size:.95rem;
-}
-
-.search-box input::placeholder{
-    color:#888;
-}
-
-.section-header{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:20px;
-}
-
-.section-header-right{
-    display:flex;
-    align-items:center;
-}
-
-@media (max-width: 700px){
-    .section-header{
-        flex-direction:column;
-        align-items:flex-start;
-        gap:16px;
-    }
-
-    .section-header-right,
-    .search-box{
-        width:100%;
-    }
-}
-
-::-webkit-scrollbar{
-    width:10px;
-    height:10px;
-}
-
-::-webkit-scrollbar-track{
-    background:rgba(255,255,255,.04);
-    border-radius:10px;
-}
-
-::-webkit-scrollbar-thumb{
-    background:rgba(255,255,255,.18);
-    border-radius:10px;
-    border:2px solid rgba(0,0,0,.6);
-}
-
-::-webkit-scrollbar-thumb:hover{
-    background:rgba(255,255,255,.35);
-}
-
-::-webkit-scrollbar-corner{
-    background:transparent;
-}
-
-*{
-    scrollbar-width: thin;
-    scrollbar-color: rgba(255,255,255,.25) rgba(255,255,255,.05);
-}
-
-</style>
+<link rel="stylesheet" href="/style.css">
     
 </head>
 
@@ -394,143 +54,7 @@ button.loading::after{
     <div id="cardsContainer"></div>
 </div>
 
-<script>
-const API_ENDPOINT = "/api/mediafire";
-
-const files = [
-  {
-    id: "0u0w9sa62hqq1oj",
-    logo: "https://files.catbox.moe/c1xa3o.ico"
-  },
-  {
-    id: "8v3sjm75zec5kr9",
-    logo: "https://files.catbox.moe/c1xa3o.ico"
-  },
-  {
-    id: "hbkgj1ado9rg4oc",
-    logo: "https://files.catbox.moe/c1xa3o.ico"
-  },
-  {
-    id: "662nf9lyye36ol2",
-    logo: "https://files.catbox.moe/c1xa3o.ico"
-  },
-  {
-    id: "cwyt9dkyz977bla",
-    logo: "https://files.catbox.moe/c1xa3o.ico"
-  }
-];
-
-const container = document.getElementById("cardsContainer");
-
-function buildMediaFireUrl(fileId){
-  return `https://www.mediafire.com/file/${fileId}`;
-}
-
-async function fetchMediaFireInfo(mediafireUrl) {
-  try {
-    const res = await fetch(
-      `${API_ENDPOINT}?url=${encodeURIComponent(mediafireUrl)}`
-    );
-
-    if (!res.ok) return null;
-
-    const data = await res.json();
-
-    if (!data.fileName || !data.downloadUrl) return null;
-
-    return {
-      name: data.fileName,
-      download: data.downloadUrl
-    };
-  } catch (e) {
-    console.error("Fetch error:", e);
-    return null;
-  }
-}
-
-async function createCard(file) {
-  const card = document.createElement("div");
-  card.className = "card";
-  card.innerHTML = `
-    <img class="logo-img" src="${file.logo}" alt="logo">
-    <div class="content">
-      <div class="filename">Loading...</div>
-      <button disabled>Download</button>
-      <div class="status">Fetching info...</div>
-    </div>
-  `;
-  container.appendChild(card);
-
-  const nameEl = card.querySelector(".filename");
-  const btn = card.querySelector("button");
-  const status = card.querySelector(".status");
-
-  const mediafireUrl = buildMediaFireUrl(file.id);
-  const info = await fetchMediaFireInfo(mediafireUrl);
-
-  if (!info) {
-    nameEl.textContent = "Cannot fetch file";
-    status.textContent = "MediaFire blocked or error";
-    return;
-  }
-
-  nameEl.textContent = info.name;
-  card.dataset.filename = info.name.toLowerCase();
-  status.textContent = "Ready to download";
-  btn.disabled = false;
-
-  btn.onclick = () => handleDownload(btn, status, info.download);
-}
-
-function handleDownload(btn, status, link) {
-  if (btn.classList.contains("loading")) return;
-
-  btn.classList.add("loading");
-  btn.disabled = true;
-
-  window.location.href = link;
-
-  let wait = 5;
-  status.textContent = `Please wait ${wait}s`;
-
-  const timer = setInterval(() => {
-    wait--;
-    status.textContent = `Please wait ${wait}s`;
-
-    if (wait < 0) {
-      clearInterval(timer);
-      btn.classList.remove("loading");
-      btn.disabled = false;
-      status.textContent = "Ready to download";
-    }
-  }, 1000);
-}
-
-files.forEach(createCard);
-
-const refreshBtn = document.getElementById("refreshPage");
-if (refreshBtn) {
-  refreshBtn.onclick = () => {
-    refreshBtn.classList.add("spin");
-    setTimeout(() => location.reload(), 800);
-  };
-}
-
-const searchInput = document.getElementById("searchInput");
-
-if (searchInput) {
-  searchInput.addEventListener("input", () => {
-    const keyword = searchInput.value.toLowerCase().trim();
-    const cards = document.querySelectorAll(".card");
-
-    cards.forEach(card => {
-      const name = card.dataset.filename || "";
-      card.style.display = name.includes(keyword) ? "" : "none";
-    });
-  });
-}
-
-</script>
+<script src="/script.js"></script>
 
 </body>
 </html>
